<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Barrel</string>
    <string name="settings">Settings</string>
    <string name="loading">Loading&#8230;</string>
    <string name="about">About</string>
    <string name="pref_js">Javascript</string>
    <string name="pref_user_agent">User agent</string>
    <string name="pref_accept_language">Accept-Language</string>
    <string name="pref_dnt">DNT (Do Not Track)</string>
    <string name="pref_cat_browser">Browser</string>
    <string name="others">Others</string>
    <string name="back">Back</string>
    <string name="forward">Forward</string>
    <string name="reload">Reload</string>
    <string name="exit">Exit</string>
    <string name="pref_search_engine">Search engine</string>
    <string name="pref_cookies">Allow cookies</string>
    <string name="pref_clear_data_on_exit">Clear data on exit</string>
    <string name="pref_clear_between_domains">Clear between domains</string>
    <string name="pref_clear_cookies_between_domains">Clear cookies between domain changes</string>
    <string name="pref_block_ads">Block ads</string>
    <string name="downloading">Downloading&#8230;</string>
    <string name="pref_start_page">Start page</string>
    <string name="share">Share</string>
    <string name="pref_cat_privacy">Privacy</string>
    <string name="pref_remember_history">Remember history</string>
    <string name="pref_clear_history_on_exit">Clear history on exit</string>
    <string name="pref_localstorage">Enable local storage</string>
    <string name="download">Download</string>

</resources>
